--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,10 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.compose.ui:ui:1.0.1"
+    implementation "androidx.compose.material:material:1.0.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.0.1"
+    implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation 'com.github.AnirudhBhat:Anumathi:1.0'
     implementation 'org.jsoup:jsoup:1.14.3'
@@ -46,4 +48,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.0.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.0.1"
 }
