--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "androidx.compose.material:material:1.1.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation 'com.github.AnirudhBhat:Anumathi:1.0'
     implementation 'org.jsoup:jsoup:1.14.3'
