--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "org.assertj:assertj-core:3.11.1"
     testImplementation "androidx.arch.core:core-testing:2.0.0-rc01"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.1.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
