--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
     }
 
     buildTypes {
@@ -51,8 +57,8 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation 'com.github.AnirudhBhat:Anumathi:1.0'
     implementation 'org.jsoup:jsoup:1.14.3'
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.4.0-alpha01"
+    kapt "androidx.room:room-compiler:2.4.0-alpha01"
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.2"
